samples/_failures_safe/1761075720_2e7b74_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9050def9.c: In function ‘main’:
./samples/SAFE/__tmp_9050def9.c:128:1: error: expected declaration or statement at end of input
  128 | int main() {
      | ^~~
